# core

./: CMakeLists.txt  CMakePresets.json  README.md
Doc/: API.md  Architecture.md  Classes.md  Command.md  Full.md  Memory.md  OpenCL.md  Quick.md
Doc/Services/: Full.md  Quick.md
cmake/: DspCoreConfig.cmake.in  fetch_deps.cmake
include/core/: drv_gpu.hpp  gpu_manager.hpp  module_registry.hpp
include/core/backends/opencl/: command_queue_pool.hpp  gpu_copy_kernel.hpp  opencl_backend.hpp
include/core/backends/rocm/: hsa_interop.hpp  rocm_backend.hpp  rocm_core.hpp
include/core/common/: backend_type.hpp  gpu_device_info.hpp  load_balancing.hpp
include/core/config/: config_serializer_factory.hpp
include/core/interface/: gpu_context.hpp  i_backend.hpp  i_compute_module.hpp  i_config_reader.hpp  i_config_writer.hpp  i_memory_buffer.hpp  output_destination.hpp
include/core/logger/: config_logger.hpp  logger.hpp
include/core/memory/: gpu_buffer.hpp  hip_buffer.hpp  i_memory_buffer.hpp  svm_buffer.hpp  svm_capabilities.hpp
include/core/services/: async_service_base.hpp  batch_manager.hpp  cache_dir_resolver.hpp  filter_config_service.hpp  gpu_benchmark_base.hpp  gpu_kernel_op.hpp  gpu_profiler.hpp  kernel_cache_service.hpp  profiling_types.hpp  scoped_hip_event.hpp  service_manager.hpp
include/core/services/storage/: i_storage_backend.hpp
include/dsp/: README.md  drv_gpu.hpp  gpu_manager.hpp  module_registry.hpp
include/dsp/backends/hybrid/: hybrid_backend.hpp
include/dsp/backends/opencl/: opencl_backend.hpp  opencl_core.hpp  opencl_export.hpp  opencl_profiling.hpp
include/dsp/backends/rocm/: stream_pool.hpp  zero_copy_bridge.hpp
include/dsp/interface/: gpu_context.hpp  i_backend.hpp  i_data_sink.hpp  i_gpu_operation.hpp  i_logger.hpp  i_memory_buffer.hpp  input_data.hpp  input_data_traits.hpp
include/dsp/logger/: default_logger.hpp  logger.hpp
include/dsp/memory/: external_cl_buffer_adapter.hpp  memory_manager.hpp  memory_type.hpp
include/dsp/services/: async_service_base.hpp  buffer_set.hpp  console_output.hpp  gpu_benchmark_base.hpp  gpu_kernel_op.hpp  gpu_profiler.hpp  kernel_cache_service.hpp  profiling_stats.hpp  service_manager.hpp
include/dsp/services/storage/: file_storage_backend.hpp
python/: CMakeLists.txt  dsp_core_module.cpp  py_gpu_context.hpp
src/: README.md  drv_gpu.cpp  gpu_context.cpp  gpu_kernel_op.cpp  module_registry.cpp
src/backends/hybrid/: hybrid_backend.cpp
src/backends/opencl/: command_queue_pool.cpp  opencl_backend.cpp  opencl_core.cpp  opencl_profiling.cpp
src/backends/rocm/: hsa_interop.cpp  rocm_backend.cpp  rocm_core.cpp  stream_pool.cpp  zero_copy_bridge.cpp
src/config/: README.md  configGPU.json  config_types.hpp  gpu_config.cpp  gpu_config.hpp  json_config_serializer.cpp  json_config_serializer.hpp
src/logger/: config_logger.cpp  default_logger.cpp  default_logger.hpp  logger.cpp
src/memory/: memory_manager.cpp
src/services/: batch_manager.cpp  cache_dir_resolver.cpp  filter_config_service.cpp  gpu_profiler.cpp  kernel_cache_service.cpp
src/services/storage/: file_storage_backend.cpp
test_utils/: gpu_test_base.hpp  gpu_transfer.hpp  reporters.hpp  test_configs.hpp  test_result.hpp  test_runner.hpp  test_utils.hpp
test_utils/references/: fft_refs.hpp  signal_refs.hpp  statistics_refs.hpp
test_utils/validators/: numeric.hpp  signal.hpp
tests/: CMakeLists.txt  README.md  all_test.hpp  example_external_context_usage.hpp  main.cpp  single_gpu.hpp  test_clmem_gpu_va_probe.cpp  test_drv_gpu_external.hpp  test_gpu_profiler.hpp  test_hybrid_backend.hpp  test_hybrid_external_context.hpp  test_rocm_backend.hpp  test_rocm_external_context.hpp  test_services.hpp  test_storage_services.hpp  test_zero_copy.hpp  test_zerocopy_rdna4.cpp
